--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -5,10 +5,10 @@ project(GAME)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -std=c++20")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(SOURCES src/main.cpp src/grid.cpp src/simulation.cpp src/game.cpp)
 
-
-include(FetchContent)
 set(RAYLIB_VERIOSN 5.0)
+include(FetchContent)
 FetchContent_Declare(
      raylib URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERIOSN}.tar.gz  
      FIND_PACKAGE_ARGS ${RAYLIB_VERIOSN})
@@ -16,7 +16,7 @@ FetchContent_Declare(
 set(BUILD_EXAMPLES OFF CACHE  INTERNAL "")
 FetchContent_MakeAvailable(raylib)
 
-add_executable(${PROJECT_NAME} src/main.cpp src/grid.cpp src/simulation.cpp)
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} raylib)
 
