--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -5,7 +5,7 @@ project(GAME)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -std=c++20")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(SOURCES src/main.cpp src/grid.cpp src/simulation.cpp src/game.cpp)
+set(SOURCES src/main.cpp src/grid.cpp src/simulation.cpp src/game.cpp src/border.cpp)
 
 set(RAYLIB_VERIOSN 5.0)
 include(FetchContent)
